Production/Production/src/objects/Solution.object
<CustomObject>
    <fields>
        <fullName>Agent_Comments__c</fullName>
        <label>Agent Comments</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Login__c</fullName>
        <label>Agent Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Reason__c</fullName>
        <label>Agent Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_Login__c</fullName>
        <label>Author Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author_Rank__c</fullName>
        <label>Author Rank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_ID__c</fullName>
        <label>Board ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_URL__c</fullName>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Li_Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User</label>
        <referenceTo>Li_Community_User__c</referenceTo>
        <relationshipLabel>Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message_Posted__c</fullName>
        <label>Message Posted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Thread_ID__c</fullName>
        <externalId>true</externalId>
        <label>Thread ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
</CustomObject>